@@ -28,7 +28,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -211,7 +210,7 @@ public class EventAccumulatorTest {
             .anyOf(futures.toArray(new CompletableFuture[0]))
             .get(5, TimeUnit.SECONDS));
 
-        futures = futures.stream().filter(future -> !future.isDone()).collect(Collectors.toList());
+        futures = futures.stream().filter(future -> !future.isDone()).toList();
         assertEquals(2, futures.size());
 
         // Processing of event0 is done.
@@ -222,7 +221,7 @@ public class EventAccumulatorTest {
             .anyOf(futures.toArray(new CompletableFuture[0]))
             .get(5, TimeUnit.SECONDS));
 
-        futures = futures.stream().filter(future -> !future.isDone()).collect(Collectors.toList());
+        futures = futures.stream().filter(future -> !future.isDone()).toList();
         assertEquals(1, futures.size());
 
         // Processing of event1 is done.
@@ -233,7 +232,7 @@ public class EventAccumulatorTest {
             .anyOf(futures.toArray(new CompletableFuture[0]))
             .get(5, TimeUnit.SECONDS));
 
-        futures = futures.stream().filter(future -> !future.isDone()).collect(Collectors.toList());
+        futures = futures.stream().filter(future -> !future.isDone()).toList();
         assertEquals(0, futures.size());
 
         // Processing of event2 is done.
