@@ -43,7 +43,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.locks.Lock;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 
 import scala.Tuple2;
 import scala.collection.Seq;
@@ -346,7 +345,7 @@ public class DelayedShareFetch extends DelayedOperation {
             shareFetch.fetchParams(),
             CollectionConverters.asScala(
                 partitionsToFetch.stream().map(topicIdPartition ->
-                    new Tuple2<>(topicIdPartition, topicPartitionData.get(topicIdPartition))).collect(Collectors.toList())
+                    new Tuple2<>(topicIdPartition, topicPartitionData.get(topicIdPartition))).toList()
             ),
             QuotaFactory.UNBOUNDED_QUOTA,
             true);
