@@ -59,7 +59,6 @@ import org.junit.jupiter.params.provider.ValueSource;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -115,7 +114,7 @@ public class KafkaNetworkChannelTest {
         List<ApiVersionsResponseData.ApiVersion> supportedApis = RAFT_APIS
             .stream()
             .map(ApiVersionsResponse::toApiVersion)
-            .collect(Collectors.toList());
+            .toList();
         client.setNodeApiVersions(NodeApiVersions.create(supportedApis));
     }
 
