@@ -31,7 +31,6 @@ import java.nio.ByteBuffer;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -87,7 +86,7 @@ class BatchBuilderTest {
 
         List<String> builtRecords = Utils.toList(batch).stream()
             .map(record -> Utils.utf8(record.value()))
-            .collect(Collectors.toList());
+            .toList();
         assertEquals(records, builtRecords);
     }
 
