@@ -19,7 +19,6 @@ package org.apache.kafka.server.share.persister;
 
 import org.apache.kafka.common.message.ReadShareGroupStateSummaryRequestData;
 
-import java.util.stream.Collectors;
 
 /**
  * This class contains the parameters for {@link Persister#readSummary(ReadShareGroupStateSummaryParameters)}.
@@ -41,8 +40,8 @@ public class ReadShareGroupStateSummaryParameters implements PersisterParameters
                         .map(topicData -> new TopicData<>(topicData.topicId(),
                                 topicData.partitions().stream()
                                         .map(partitionData -> PartitionFactory.newPartitionIdLeaderEpochData(partitionData.partition(), partitionData.leaderEpoch()))
-                                        .collect(Collectors.toList())))
-                        .collect(Collectors.toList())))
+                                        .toList()))
+                        .toList()))
                 .build();
     }
 
