@@ -29,7 +29,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.util.Arrays.asList;
@@ -106,7 +105,7 @@ public final class RemoteTopicPartitionDirectory {
 
         return uuids.stream()
                 .map(uuid -> RemoteLogSegmentFileset.openExistingFileset(this, uuid))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
