@@ -181,7 +181,7 @@ public final class BrokerLocalStorage {
                 .filter(filename -> filename.endsWith(LogFileUtils.LOG_FILE_SUFFIX))
                 .sorted()
                 .findFirst();
-        if (!firstLogFile.isPresent()) {
+        if (firstLogFile.isEmpty()) {
             throw new IllegalArgumentException(String.format(
                     "[BrokerId=%d] No log file found for the topic-partition %s", brokerId, topicPartition));
         }
@@ -218,7 +218,7 @@ public final class BrokerLocalStorage {
         File topicPartitionDir = files[0];
         return Arrays.stream(Objects.requireNonNull(topicPartitionDir.listFiles()))
                 .map(File::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static final class OffsetHolder {
